--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@nivo/geo": "^0.88.0",
     "@nivo/line": "^0.88.0",
     "@nivo/pie": "^0.88.0",
+    "@react-google-maps/api": "^2.20.5",
     "@svgr/plugin-svgo": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "^16.2.0",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.28.2",
     "react-scripts": "^5.0.1",
@@ -57,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
