--- a/package.json
+++ b/package.json
@@ -25,12 +25,18 @@
     "@svgr/plugin-svgo": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "^16.2.0",
+    "base-64": "^1.0.0",
     "cra-template": "1.2.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "leaflet": "^1.9.4",
+    "leaflet-easyprint": "^2.1.9",
+    "leaflet.heat": "^0.2.0",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
