mayday-app-landing-login-ui-changes

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "^16.2.0",
     "base-64": "^1.0.0",
+    "caniuse-lite": "^1.0.30001748",
     "cra-template": "1.2.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.7",
@@ -43,6 +44,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^6.28.2",
     "react-scripts": "^5.0.1",
     "svgo": "^3.3.2",
