--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 .env.test.local
 .env.production.local
 
+# apk
+public/downloads/*.apk
+*.apk
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
